[package]
name = "squid-orbit-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"                                                 # For error handling.
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
iced_test = "0.0.0"
nalgebra = "0.34.0"                                               # For vector and matrix math (linear algebra).
nav-types = "0.5.2"                                               # For coordinate system transformations.
once_cell = "1.21.3"                                              # For memoization of constant properties in structs.
satkit = "0.5.6"                                                  # Main satellite simulation.
strum = "0.27.2"
strum_macros = "0.27.2"
