[package]
name = "squid-orbit-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"                                               # For error handling.
eframe = "0.32.3"
nalgebra = "0.34.0"                                             # For vector and matrix math (linear algebra).
nav-types = "0.5.2"                                             # For coordinate system transformations.
once_cell = "1.21.3"                                            # For memoization of constant properties in structs.
satkit = "0.8.0"                                                # Main satellite simulation.
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.47.1"
